added language pack: Arabic

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,139 +1,139 @@
 {
-    "mainTitle": "Recepción de la Experiencia Mini‑Capstone de la Facultad de Ingeniería",
+    "mainTitle": "Recepción de la experiencia mini-capstone de la Facultad de Ingeniería",
     "reserved": "Con reserva",
-    "walkIn": "Sin reserva",
-    "back": "Volver",
-    "enterFullName": "Por favor, ingresa tu nombre completo",
-    "reservedNameInputTitle": "Con reserva - Ingresa tu nombre",
-    "walkInNameInputTitle": "Sin reserva - Ingresa tu nombre",
-    "namePlaceholder": "Ej.: Taro Yamada",
-    "checkReservation": "Verificar reserva",
+    "walkIn": "Registro el día del evento",
+    "back": "Atrás",
+    "enterFullName": "Por favor, introduce el nombre completo",
+    "reservedNameInputTitle": "Con reserva - Introduce tu nombre",
+    "walkInNameInputTitle": "Sin reserva - Introduce tu nombre",
+    "namePlaceholder": "Ej.: Ana Pérez",
+    "checkReservation": "Comprobar reserva",
     "confirmDetails": "Confirma tus datos",
     "confirmSubmit": "Confirmar",
     "changeReservation": "Cambiar preferencias",
     "name": "Nombre",
-    "furigana": "Furigana",
-    "furiganaPlaceholder": "Ej.: YAMADA TARO",
+    "furigana": "Lectura",
+    "furiganaPlaceholder": "Ej.: ANA PÉREZ",
     "requiredMark": "Obligatorio",
-    "school": "Nombre de la escuela",
-    "schoolPlaceholder": "Ej.: Escuela Secundaria Ejemplo",
+    "school": "Nombre del centro",
+    "schoolPlaceholder": "Ej.: Instituto Futuro",
     "grade": "Curso",
-    "selectGrade": "Selecciona una opción",
-    "grade1": "1.º de preparatoria",
-    "grade2": "2.º de preparatoria",
-    "grade3": "3.º de preparatoria",
+    "selectGrade": "Selecciona un curso",
+    "grade1": "1.º de bachillerato",
+    "grade2": "2.º de bachillerato",
+    "grade3": "3.º de bachillerato",
     "other": "Otro",
-    "toProgramSelection": "Seleccionar programa de experiencia Capstone",
-    "noCapstoneExperience": "Para quienes solo asisten a la sesión informativa de la Facultad de Ingeniería",
-    "selectProgramTitle": "Selecciona tus programas preferidos",
-    "selectProgramDesc": "Puedes seleccionar hasta 3 preferencias.",
+    "toProgramSelection": "Ir a selección de programa",
+    "noCapstoneExperience": "Solo asistiré a la sesión informativa",
+    "selectProgramTitle": "Selecciona los programas preferidos",
+    "selectProgramDesc": "Puedes elegir hasta 3 preferencias.",
     "confirmChoices": "Confirmar selección",
     "successTitle": "¡Registro completado!",
-    "successDesc": "Has sido confirmado para el siguiente programa:",
-    "successWaiting": "Tu programa será asignado más tarde.",
+    "successDesc": "Has sido asignado al siguiente programa:",
+    "successWaiting": "El programa se asignará más tarde.",
     "backToHome": "Volver al inicio",
     "adminPanel": "Panel de administración",
-    "tabProgramEdit": "Edición de programas",
+    "tabProgramEdit": "Editar programas",
     "tabFileLoad": "Cargar archivos",
-    "tabRoster": "Vista previa del listado",
-    "tabStatus": "Estado de recepción",
+    "tabRoster": "Vista de listas",
+    "tabStatus": "Estado de la recepción",
     "tabSettings": "Configuración",
     "showTranslation": "Mostrar traducción al inglés",
-    "jsonEditor": "Ver/editar JSON",
-    "applyJson": "Aplicar JSON",
-    "addProgram": "+ Agregar programa",
+    "addProgram": "+ Añadir programa",
     "saveChanges": "Guardar cambios",
-    "fileUpload1": "① Listado de reservas de la Experiencia Mini‑Capstone (xlsx)",
-    "fileUpload2": "② Listado de la sesión informativa de la Facultad de Ingeniería (xlsx)",
-    "loadProgress": "③ Cargar progreso (.json)",
-    "rosterReservations": "Listado de reservas de la Experiencia Mini‑Capstone",
-    "rosterBriefing": "Listado de la sesión informativa de la Facultad de Ingeniería",
+    "fileUpload1": "① Lista de reservas de la experiencia (xlsx)",
+    "fileUpload2": "② Lista de asistentes a la sesión informativa (xlsx)",
+    "rosterReservations": "Lista de reservas de la experiencia",
+    "rosterBriefing": "Lista de asistentes a la sesión informativa",
     "rosterOthers": "Otros",
-    "rosterSearchPlaceholder": "Buscar por nombre/Furigana",
+    "rosterSearchPlaceholder": "Buscar por nombre/lectura",
     "statusConfirmed": "Confirmado",
     "statusWaiting": "En espera",
-    "statusNotRegistered": "No registrado",
+    "statusNotRegistered": "Sin registrar",
     "confirmedList": "Lista de confirmados",
     "waitingList": "Lista de espera",
-    "assignWaiting": "Asignar en espera",
-    "saveProgress": "Guardar progreso",
+    "assignWaiting": "Asignar a los que esperan",
     "exportData": "Exportar",
-    "exportSelect": "Seleccionar formato de exportación",
+    "exportSelect": "Selecciona formato de exportación",
     "exportExcelBtn": "Excel",
     "exportPdfBtn": "PDF",
-    "prioritizeReserved": "Priorizar participantes con reserva",
-    "prioritizeDesc": "Cuando está ACTIVADO, los participantes sin reserva quedarán en 'En espera'. Tras completar todos los registros, asígnalos desde la pestaña 'Estado de recepción' con el botón 'Asignar en espera'.",
-    "prioritizeGrade": "Priorizar por curso (para sin reserva)",
-    "prioritizeGradeDesc": "Si está ACTIVADO, los participantes en espera se asignan por curso (3.º → 2.º → 1.º → Otros). Si está DESACTIVADO, por orden de llegada.",
-    "resetData": "Restablecer datos de recepción",
-    "backToReception": "Volver a la pantalla de recepción",
+    "prioritizeReserved": "Dar prioridad a reservas",
+    "prioritizeDesc": "Al activarlo, los asistentes sin reserva quedan en espera. Después de terminar el registro, confirma desde 'Estado de la recepción'.",
+    "prioritizeGrade": "Priorizar por curso (sin reserva)",
+    "prioritizeGradeDesc": "Al activarlo, los asistentes en espera se ordenan por curso (3.º → 2.º → 1.º → otros). Al desactivarlo, es por orden de llegada.",
+    "resetData": "Restablecer datos",
+    "backToReception": "Volver a la recepción",
     "adminLogin": "Inicio de sesión de administrador",
-    "email": "Correo electrónico",
     "password": "Contraseña",
+    "email": "Correo electrónico",
     "login": "Iniciar sesión",
     "logout": "Cerrar sesión",
     "cancel": "Cancelar",
-    "choice1": "1.ª preferencia",
-    "choice2": "2.ª preferencia",
-    "choice3": "3.ª preferencia",
+    "choice1": "1.ª opción",
+    "choice2": "2.ª opción",
+    "choice3": "3.ª opción",
     "nameHeader": "Nombre",
     "programHeader": "Programa",
     "statusHeader": "Estado (personas)",
-    "attendeesHeader": "Asistentes",
+    "attendeesHeader": "Participantes",
     "waitingHeader": "En espera de asignación",
-    "furiganaHeader": "Furigana",
+    "furiganaHeader": "Lectura",
     "timeHeader": "Hora",
-    "noAttendees": "Aún no hay",
+    "noAttendees": "Todavía no hay participantes",
     "unselected": "Sin seleccionar",
     "titleLabel": "Título",
     "descriptionLabel": "Descripción",
     "capacityLabel": "Cupo",
     "deleteButton": "Eliminar",
-    "autoTranslate": "Traducir automáticamente al inglés",
+    "autoTranslate": "Traducción automática al inglés",
     "titleEnLabel": "Título (inglés)",
     "descriptionEnLabel": "Descripción (inglés)",
-    "full": "Este programa está completo",
-    "cardView": "Vista de tarjetas",
+    "full": "Programa completo",
+    "cardView": "Vista en tarjetas",
     "totalConfirmed": "Total confirmados",
     "totalWaiting": "Total en espera",
     "totalAttendees": "Total registrados",
-    "scheduleTitle": "Horario",
+    "scheduleTitle": "Calendario",
     "companionsCountLabel": "Número de acompañantes",
     "noCapstoneTitle": "Registro completado",
-    "noCapstoneDesc": "Se ha completado tu registro para no participar en la experiencia Capstone.",
-    "noCapstoneInfo": "Si solo asistirás a la sesión informativa, por favor regístrate por separado.",
-    "nameSpaceNote": "※ Introduce un espacio entre apellido y nombre",
-    "errorEnterName": "Por favor, ingresa tu nombre.",
-    "errorNotFound": "No se encontró la reserva. Verifica el nombre o regístrate como sin reserva.",
+    "noCapstoneDesc": "Se ha registrado tu participación sin la experiencia capstone.",
+    "noCapstoneInfo": "Si asistes solo a la sesión informativa, regístrate por separado.",
+    "nameSpaceNote": "※ Separa nombre y apellido con un espacio",
+    "errorEnterName": "Introduce el nombre.",
+    "errorNotFound": "No se encontró la reserva. Comprueba el nombre o regístrate como visitante.",
     "errorAllFields": "Completa todos los campos obligatorios.",
     "errorSelectProgram": "Selecciona al menos un programa.",
-    "errorJsonFormat": "Formato JSON no válido.",
-    "infoJsonApplied": "Datos aplicados desde JSON.",
     "infoChangesSaved": "Cambios guardados.",
     "settingsSaved": "Configuración guardada.",
-    "errorProgramFull": "Este programa está completo. Elige otro.",
-    "errorInvalidProgram": "Datos de programa no válidos. Elige otro.",
-    "errorDuplicateChoices": "No puedes seleccionar el mismo programa en varias preferencias.",
-    "errorUnexpected": "Ocurrió un error inesperado. Inténtalo de nuevo.",
-    "assignComplete": "La asignación para {count} personas se ha completado.",
-    "noWaiting": "No hay participantes en la lista de espera.",
-    "noRosterData": "Aún no se han importado datos de listados. Importa el archivo desde el panel de administración.",
-    "resetConfirm": "Se restablecerán todos los datos de recepción (listas de confirmados y de espera). Esta acción no se puede deshacer. ¿Deseas continuar?",
+    "errorProgramFull": "El programa está completo. Elige otro.",
+    "errorInvalidProgram": "Datos del programa inválidos. Elige otro.",
+    "errorDuplicateChoices": "No puedes repetir el mismo programa en varias opciones.",
+    "errorUnexpected": "Ocurrió un error inesperado. Intenta de nuevo.",
+    "assignComplete": "Asignación completada para {count} personas.",
+    "noWaiting": "No hay participantes en espera.",
+    "noRosterData": "No se han importado las listas. Carga los archivos desde la administración.",
+    "resetConfirm": "Se restablecerán todos los datos (confirmados y en espera). No se puede deshacer. ¿Continuar?",
     "resetComplete": "Datos restablecidos. La página se recargará ahora.",
-    "reloadDisabled": "La recarga está deshabilitada en esta página para evitar la pérdida de datos.",
-    "errorAlreadyRegistered": "Ya estás registrado o en la lista de espera.",
+    "reloadDisabled": "Recargar está deshabilitado para evitar pérdida de datos.",
+    "errorAlreadyRegistered": "Ya estás registrado o en espera.",
     "wrongPassword": "Contraseña incorrecta.",
-    "noChoicesProvided": "No proporcionaste preferencias de programa con tu reserva, por lo que debes seleccionarlas ahora.",
-    "noCapstoneBriefingTime": "{name}, tu sesión informativa de la Facultad de Ingeniería comienza a las {time}.",
+    "noChoicesProvided": "No elegiste preferencias al reservar, así que debes seleccionarlas ahora.",
+    "noCapstoneBriefingTime": "{name}, tu sesión informativa comienza a las {time}.",
     "languageSelfName": "Español",
     "languageSwitchedTo": "Idioma cambiado a {lang}.",
-    "mappingTitle": "Configurar mapeo de columnas",
+    "mappingTitle": "Asignar columnas",
     "mappingApply": "Aplicar",
     "mappingCancel": "Cancelar",
     "themeLight": "Modo claro",
     "themeDark": "Modo oscuro",
-    "themeLiquid": "Modo Liquid Glass",
-    "liquidActivated": "Modo Liquid Glass activado.",
+    "themeLiquid": "Modo vidrio líquido",
+    "liquidActivated": "Modo vidrio líquido activado.",
     "lightActivated": "Modo claro activado.",
-    "darkActivated": "Modo oscuro activado."
+    "darkActivated": "Modo oscuro activado.",
+    "offlineRequiredTitle": "Se requiere conexión",
+    "offlineRequiredDesc": "Esta aplicación necesita conexión a internet. Comprueba tu conexión y vuelve a intentarlo.",
+    "offlineToastMessage": "Sin conexión a la red",
+    "errorNetworkUnavailable": "Se perdió la conexión. Comprueba la red e inténtalo de nuevo.",
+    "errorDatabaseWriteFailed": "No se pudo guardar en la base de datos. Contacta al personal.",
+    "notificationDatabaseSaved": "Datos guardados correctamente."
 }
