--- a/locales/id.json
+++ b/locales/id.json
@@ -1,77 +1,73 @@
 {
-    "mainTitle": "Penerimaan Pengalaman Mini-Capstone Fakultas Teknik",
-    "reserved": "Sudah Reservasi",
-    "walkIn": "Langsung Datang",
+    "mainTitle": "Penerimaan Mini Capstone Fakultas Teknik",
+    "reserved": "Sudah reservasi",
+    "walkIn": "Daftar di tempat",
     "back": "Kembali",
-    "enterFullName": "Silakan masukkan nama lengkap Anda",
-    "reservedNameInputTitle": "Reservasi - Masukkan Nama Anda",
-    "walkInNameInputTitle": "Langsung Datang - Masukkan Nama Anda",
-    "namePlaceholder": "Contoh: Budi Santoso",
-    "checkReservation": "Periksa Reservasi",
-    "confirmDetails": "Konfirmasi Detail Anda",
+    "enterFullName": "Silakan masukkan nama lengkap",
+    "reservedNameInputTitle": "Dengan reservasi - Masukkan nama",
+    "walkInNameInputTitle": "Tanpa reservasi - Masukkan nama",
+    "namePlaceholder": "Contoh: Budi Setiawan",
+    "checkReservation": "Periksa reservasi",
+    "confirmDetails": "Konfirmasi data Anda",
     "confirmSubmit": "Konfirmasi",
-    "changeReservation": "Ubah Pilihan",
+    "changeReservation": "Ubah pilihan",
     "name": "Nama",
-    "furigana": "Furigana",
-    "furiganaPlaceholder": "Contoh: BUDI SANTOSO",
+    "furigana": "Pelafalan",
+    "furiganaPlaceholder": "Contoh: BUDI SETIAWAN",
     "requiredMark": "Wajib",
-    "school": "Nama Sekolah",
-    "schoolPlaceholder": "Contoh: SMA Negeri 1",
+    "school": "Nama sekolah",
+    "schoolPlaceholder": "Contoh: SMA Harapan",
     "grade": "Kelas",
-    "selectGrade": "Silakan pilih",
-    "grade1": "Kelas 1 SMA",
-    "grade2": "Kelas 2 SMA",
-    "grade3": "Kelas 3 SMA",
+    "selectGrade": "Pilih kelas",
+    "grade1": "Kelas 10",
+    "grade2": "Kelas 11",
+    "grade3": "Kelas 12",
     "other": "Lainnya",
-    "toProgramSelection": "Pilih Program Pengalaman Capstone",
-    "noCapstoneExperience": "Bagi yang hanya menghadiri Pengarahan Fakultas Teknik",
-    "selectProgramTitle": "Pilih Program Pilihan Anda",
-    "selectProgramDesc": "Anda dapat memilih hingga 3 preferensi.",
-    "confirmChoices": "Konfirmasi Pilihan",
-    "successTitle": "Pendaftaran Selesai!",
-    "successDesc": "Anda telah dikonfirmasi untuk program berikut:",
-    "successWaiting": "Program Anda akan ditentukan nanti.",
-    "backToHome": "Kembali ke Beranda",
-    "adminPanel": "Panel Admin",
-    "tabProgramEdit": "Edit Program",
-    "tabFileLoad": "Muat File",
-    "tabRoster": "Pratinjau Daftar Nama",
-    "tabStatus": "Status Penerimaan",
+    "toProgramSelection": "Pilih program",
+    "noCapstoneExperience": "Hanya mengikuti sesi informasi",
+    "selectProgramTitle": "Pilih program favorit",
+    "selectProgramDesc": "Anda dapat memilih hingga 3 pilihan.",
+    "confirmChoices": "Konfirmasi pilihan",
+    "successTitle": "Registrasi berhasil!",
+    "successDesc": "Anda telah ditempatkan pada program berikut:",
+    "successWaiting": "Program akan ditentukan kemudian.",
+    "backToHome": "Kembali ke halaman awal",
+    "adminPanel": "Panel admin",
+    "tabProgramEdit": "Edit program",
+    "tabFileLoad": "Muat berkas",
+    "tabRoster": "Daftar peserta",
+    "tabStatus": "Status penerimaan",
     "tabSettings": "Pengaturan",
-    "showTranslation": "Tampilkan Terjemahan Bahasa Inggris",
-    "jsonEditor": "Lihat/Edit JSON",
-    "applyJson": "Terapkan JSON",
-    "addProgram": "+ Tambah Program",
-    "saveChanges": "Simpan Perubahan",
-    "fileUpload1": "① Daftar Reservasi Pengalaman Mini-Capstone (xlsx)",
-    "fileUpload2": "② Daftar Sesi Pengarahan Fakultas Teknik (xlsx)",
-    "loadProgress": "③ Muat Progres (.json)",
-    "rosterReservations": "Daftar Reservasi Pengalaman Mini-Capstone",
-    "rosterBriefing": "Daftar Sesi Pengarahan Fakultas Teknik",
-    "rosterOthers": "Lainnya",
-    "rosterSearchPlaceholder": "Cari berdasarkan Nama/Furigana",
+    "showTranslation": "Tampilkan terjemahan Inggris",
+    "addProgram": "+ Tambah program",
+    "saveChanges": "Simpan perubahan",
+    "fileUpload1": "① Daftar reservasi mini capstone (xlsx)",
+    "fileUpload2": "② Daftar peserta sesi informasi (xlsx)",
+    "rosterReservations": "Daftar reservasi mini capstone",
+    "rosterBriefing": "Daftar peserta sesi informasi",
+    "rosterOthers": "Daftar lainnya",
+    "rosterSearchPlaceholder": "Cari nama/pelafalan",
     "statusConfirmed": "Terkonfirmasi",
     "statusWaiting": "Menunggu",
-    "statusNotRegistered": "Belum Terdaftar",
-    "confirmedList": "Daftar Terkonfirmasi",
-    "waitingList": "Daftar Tunggu",
-    "assignWaiting": "Tetapkan Peserta yang Menunggu",
-    "saveProgress": "Simpan Progres",
+    "statusNotRegistered": "Belum terdaftar",
+    "confirmedList": "Daftar terkonfirmasi",
+    "waitingList": "Daftar tunggu",
+    "assignWaiting": "Tempatkan peserta tunggu",
     "exportData": "Ekspor",
-    "exportSelect": "Pilih Format Ekspor",
+    "exportSelect": "Pilih format ekspor",
     "exportExcelBtn": "Excel",
     "exportPdfBtn": "PDF",
-    "prioritizeReserved": "Prioritaskan Peserta yang Reservasi",
-    "prioritizeDesc": "Jika AKTIF, peserta yang datang langsung akan berstatus 'Menunggu'. Setelah semua pendaftaran selesai, tetapkan mereka dari tab 'Status Penerimaan' menggunakan tombol 'Tetapkan Peserta yang Menunggu'.",
-    "prioritizeGrade": "Prioritaskan berdasarkan Kelas (untuk yang Langsung Datang)",
-    "prioritizeGradeDesc": "Jika AKTIF, peserta yang menunggu akan ditetapkan berdasarkan kelas (Kelas 3 → Kelas 2 → Kelas 1 → Lainnya). Jika NONAKTIF, berdasarkan urutan kedatangan.",
-    "resetData": "Atur Ulang Data Penerimaan",
-    "backToReception": "Kembali ke Layar Penerimaan",
-    "adminLogin": "Login Admin",
-    "email": "Alamat Email",
-    "password": "Kata Sandi",
-    "login": "Login",
-    "logout": "Logout",
+    "prioritizeReserved": "Prioritaskan yang reservasi",
+    "prioritizeDesc": "Jika aktif, peserta tanpa reservasi akan masuk daftar tunggu hingga proses pendaftaran selesai, lalu dapat dialokasikan sekaligus.",
+    "prioritizeGrade": "Prioritaskan berdasarkan kelas (tanpa reservasi)",
+    "prioritizeGradeDesc": "Jika aktif, peserta tunggu diurutkan berdasarkan kelas (12 → 11 → 10 → lainnya). Jika tidak, berdasarkan urutan datang.",
+    "resetData": "Setel ulang data",
+    "backToReception": "Kembali ke penerimaan",
+    "adminLogin": "Login admin",
+    "password": "Kata sandi",
+    "email": "Surel",
+    "login": "Masuk",
+    "logout": "Keluar",
     "cancel": "Batal",
     "choice1": "Pilihan 1",
     "choice2": "Pilihan 2",
@@ -79,61 +75,65 @@
     "nameHeader": "Nama",
     "programHeader": "Program",
     "statusHeader": "Status (jumlah)",
-    "attendeesHeader": "Peserta",
-    "waitingHeader": "Menunggu Penempatan",
-    "furiganaHeader": "Furigana",
+    "attendeesHeader": "Daftar peserta",
+    "waitingHeader": "Menunggu dialokasikan",
+    "furiganaHeader": "Pelafalan",
     "timeHeader": "Waktu",
-    "noAttendees": "Belum ada",
-    "unselected": "Tidak dipilih",
+    "noAttendees": "Belum ada peserta",
+    "unselected": "Belum dipilih",
     "titleLabel": "Judul",
     "descriptionLabel": "Deskripsi",
     "capacityLabel": "Kapasitas",
     "deleteButton": "Hapus",
-    "autoTranslate": "Terjemahkan otomatis ke Bahasa Inggris",
+    "autoTranslate": "Terjemahkan otomatis ke Inggris",
     "titleEnLabel": "Judul (Inggris)",
     "descriptionEnLabel": "Deskripsi (Inggris)",
-    "full": "Program ini sudah penuh",
-    "cardView": "Tampilan Kartu",
-    "totalConfirmed": "Total Terkonfirmasi",
-    "totalWaiting": "Total Menunggu",
-    "totalAttendees": "Total Terdaftar",
+    "full": "Kapasitas penuh",
+    "cardView": "Tampilan kartu",
+    "totalConfirmed": "Total terkonfirmasi",
+    "totalWaiting": "Total menunggu",
+    "totalAttendees": "Total peserta",
     "scheduleTitle": "Jadwal",
-    "companionsCountLabel": "Jumlah Pendamping",
-    "noCapstoneTitle": "Pendaftaran Selesai",
-    "noCapstoneDesc": "Pendaftaran Anda untuk tidak berpartisipasi dalam pengalaman capstone telah selesai.",
-    "noCapstoneInfo": "Jika Anda hanya menghadiri pengarahan Fakultas Teknik, silakan mendaftar secara terpisah.",
-    "nameSpaceNote": "※ Harap beri spasi antara nama keluarga dan nama depan",
-    "errorEnterName": "Silakan masukkan nama Anda.",
-    "errorNotFound": "Reservasi tidak ditemukan. Silakan periksa nama atau daftar sebagai peserta langsung.",
-    "errorAllFields": "Harap isi semua kolom yang wajib diisi.",
-    "errorSelectProgram": "Silakan pilih setidaknya satu program.",
-    "errorJsonFormat": "Format JSON tidak valid.",
-    "infoJsonApplied": "Data diterapkan dari JSON.",
-    "infoChangesSaved": "Perubahan telah disimpan.",
-    "settingsSaved": "Pengaturan telah disimpan.",
-    "errorProgramFull": "Program ini penuh. Silakan pilih yang lain.",
-    "errorInvalidProgram": "Data program tidak valid. Silakan pilih yang lain.",
-    "errorDuplicateChoices": "Anda tidak dapat memilih program yang sama untuk beberapa preferensi.",
-    "errorUnexpected": "Terjadi kesalahan tak terduga. Silakan coba lagi.",
-    "assignComplete": "Penetapan untuk {count} orang selesai.",
+    "companionsCountLabel": "Jumlah pendamping",
+    "noCapstoneTitle": "Registrasi lengkap",
+    "noCapstoneDesc": "Anda terdaftar tanpa mengikuti pengalaman capstone.",
+    "noCapstoneInfo": "Jika hanya mengikuti sesi informasi, silakan daftar secara terpisah.",
+    "nameSpaceNote": "※ Beri spasi antara nama depan dan nama keluarga",
+    "errorEnterName": "Masukkan nama.",
+    "errorNotFound": "Reservasi tidak ditemukan. Periksa nama atau daftar sebagai peserta langsung.",
+    "errorAllFields": "Lengkapi semua kolom wajib.",
+    "errorSelectProgram": "Pilih minimal satu program.",
+    "infoChangesSaved": "Perubahan disimpan.",
+    "settingsSaved": "Pengaturan disimpan.",
+    "errorProgramFull": "Program ini penuh. Pilih program lain.",
+    "errorInvalidProgram": "Data program tidak valid. Pilih program lain.",
+    "errorDuplicateChoices": "Program yang sama tidak boleh dipilih lebih dari satu kali.",
+    "errorUnexpected": "Terjadi kesalahan. Coba lagi.",
+    "assignComplete": "Penempatan selesai untuk {count} peserta.",
     "noWaiting": "Tidak ada peserta dalam daftar tunggu.",
-    "noRosterData": "Data daftar nama belum diimpor. Silakan impor file dari panel admin.",
-    "resetConfirm": "Semua data penerimaan (daftar terkonfirmasi dan menunggu) akan diatur ulang. Tindakan ini tidak dapat dibatalkan. Apakah Anda yakin?",
-    "resetComplete": "Data telah diatur ulang. Halaman akan dimuat ulang sekarang.",
-    "reloadDisabled": "Memuat ulang dinonaktifkan di halaman ini untuk mencegah kehilangan data.",
-    "errorAlreadyRegistered": "Anda sudah terdaftar atau berada dalam daftar tunggu.",
+    "noRosterData": "Data daftar belum diimpor. Harap muat file dari panel admin.",
+    "resetConfirm": "Semua data (terkonfirmasi dan tunggu) akan dihapus. Tindakan ini tidak dapat dibatalkan. Lanjutkan?",
+    "resetComplete": "Data direset. Halaman akan dimuat ulang.",
+    "reloadDisabled": "Memuat ulang dinonaktifkan untuk mencegah hilangnya data.",
+    "errorAlreadyRegistered": "Anda sudah terdaftar atau sedang menunggu.",
     "wrongPassword": "Kata sandi salah.",
-    "noChoicesProvided": "Anda tidak memberikan preferensi program saat reservasi, jadi Anda harus memilihnya sekarang.",
-    "noCapstoneBriefingTime": "{name}, sesi pengarahan Fakultas Teknik Anda dimulai pukul {time}.",
+    "noChoicesProvided": "Anda belum memilih preferensi program saat reservasi, silakan pilih sekarang.",
+    "noCapstoneBriefingTime": "{name}, sesi informasi Anda dimulai pada {time}.",
     "languageSelfName": "Bahasa Indonesia",
     "languageSwitchedTo": "Bahasa diubah ke {lang}.",
-    "mappingTitle": "Atur pemetaan kolom",
+    "mappingTitle": "Tetapkan kolom",
     "mappingApply": "Terapkan",
     "mappingCancel": "Batal",
     "themeLight": "Mode terang",
     "themeDark": "Mode gelap",
-    "themeLiquid": "Mode Liquid Glass",
-    "liquidActivated": "Mode Liquid Glass diaktifkan.",
+    "themeLiquid": "Mode kaca cair",
+    "liquidActivated": "Mode kaca cair diaktifkan.",
     "lightActivated": "Mode terang diaktifkan.",
-    "darkActivated": "Mode gelap diaktifkan."
+    "darkActivated": "Mode gelap diaktifkan.",
+    "offlineRequiredTitle": "Perlu koneksi Internet",
+    "offlineRequiredDesc": "Aplikasi ini memerlukan koneksi internet. Periksa koneksi Anda dan coba lagi.",
+    "offlineToastMessage": "Tidak dapat terhubung ke jaringan",
+    "errorNetworkUnavailable": "Koneksi jaringan terputus. Periksa jaringan dan coba lagi.",
+    "errorDatabaseWriteFailed": "Gagal menyimpan ke database. Hubungi panitia.",
+    "notificationDatabaseSaved": "Data berhasil disimpan."
 }
