home screen fix

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -85,7 +85,7 @@
     "descriptionLabel": "الوصف",
     "capacityLabel": "السعة",
     "deleteButton": "حذف",
-    "autoTranslate": "ترجمة تلقائية إلى الإنجليزية",
+    "autoTranslate": "الترجمة إلى الإنجليزية",
     "titleEnLabel": "العنوان (بالإنجليزية)",
     "descriptionEnLabel": "الوصف (بالإنجليزية)",
     "full": "اكتمل عدد المقاعد",
