--- a/locales/ja.json
+++ b/locales/ja.json
@@ -137,5 +137,40 @@
     "offlineToastMessage": "ネットワークに接続できません",
     "errorNetworkUnavailable": "ネットワークに接続できません。接続を確認して再度お試しください。",
     "errorDatabaseWriteFailed": "データベースに保存できませんでした。スタッフにお問い合わせください。",
-    "notificationDatabaseSaved": "データを保存しました。"
+    "notificationDatabaseSaved": "データを保存しました。",
+    "mobileTitle": "KUAS 工学部ミニキャップストーン体験 スマホ受付",
+    "mobileLandingSubtitle": "ご予約の有無を選択してください。スマホ専用フローでスタッフがすぐにご案内します。",
+    "mobileReservedCardTitle": "予約ありのお客様",
+    "mobileReservedCardDesc": "お名前を入力して予約内容を確認します。現地での割り当ても自動で行われます。",
+    "mobileWalkinCardTitle": "予約なしのお客様",
+    "mobileWalkinCardDesc": "お名前や学年などを入力し、体験したいプログラムを選択します。",
+    "mobileReservedTitle": "お名前を教えてください",
+    "mobileReservedHint": "ご予約名簿から検索します。姓と名の間にスペースを入れてください。",
+    "mobileReservedInputLabel": "お名前",
+    "mobileReservedInputPlaceholder": "例：山田 太郎",
+    "mobileReservedSubmit": "予約を確認する",
+    "mobileWalkinTitle": "お客様情報を入力してください",
+    "mobileWalkinSubtitle": "スタッフがスムーズに案内できるよう、必要な項目のみ入力いただきます。",
+    "mobileWalkinNameLabel": "お名前",
+    "mobileWalkinFuriganaLabel": "フリガナ",
+    "mobileWalkinSchoolLabel": "学校名",
+    "mobileWalkinGradeLabel": "学年",
+    "mobileWalkinCompanionsLabel": "同伴者人数",
+    "mobileWalkinPrimary": "プログラムを選ぶ",
+    "mobileWalkinSecondary": "キャップストーン体験には参加しない",
+    "mobileProgramTitle": "希望するプログラムをお選びください",
+    "mobileProgramSubtitle": "最大3つまで選択できます。同じプログラムを複数回選ぶことはできません。",
+    "mobileProgramClear": "選択をクリア",
+    "mobileProgramConfirm": "選択を確定する",
+    "mobileSummaryTitle": "受付内容を確認",
+    "mobileSummaryGrade": "学年",
+    "mobileSummaryCompanions": "同伴者",
+    "mobileSummaryStatus": "ステータス",
+    "mobileSummaryEdit": "プログラムを変更",
+    "mobileSummaryFinalize": "受付を確定する",
+    "mobileSummaryWait": "待機として保存",
+    "mobileBriefingTitle": "工学部説明会の受付",
+    "mobileBriefingFinalize": "受付を完了",
+    "mobileSuccessTitle": "受付が完了しました！",
+    "mobileSuccessBack": "最初の画面にもどる"
 }
